--- a/codetree/evaluation.html
+++ b/codetree/evaluation.html
@@ -15,6 +15,7 @@
 	    </div>
 	    <div class="right">
   	    <span>SByC on</span>
+  	    <a href="http://rubygems.org/gems/sbyc">rubygems.org</a>
   	    <a href="http://rdoc.info/projects/blambeau/sbyc">rdoc.info</a>
   	    <a href="http://github.com/blambeau/sbyc">GitHub</a>
   	  </div>
